--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -2,7 +2,7 @@ name: Build DeputyDev Linux Binary
 
 on:
   release:
-    types: [published, prereleased]
+    types: [published]
 
 jobs:
   build-linux:
