--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -2,7 +2,7 @@ name: Build DeputyDev Windows Binary
 
 on:
   release:
-    types: [published, prereleased]
+    types: [published]
 
 jobs:
   build-windows:
