--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "bs4==0.0.2",
   "html2text==2025.4.15",
   "deputydev-core @ git+ssh://git@github.com/DeputyDev-1mg/deputydev-core.git@5.1.0",
+  "anthropic>=0.58.2",
 ]
 
 [project.optional-dependencies]
