--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,9 @@ dev = [
     "pre-commit>=4.2.0",
     "ruff==0.12.0",
 ]
+
+[tool.setuptools]
+packages = ["app"]
+
+[project.scripts]
+deputydev-binary = "app.service:main"
