--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -28,6 +28,11 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
 
+      - name: Start ssh-agent and add deploy key
+        run: |
+          eval "$(ssh-agent -s)"
+          ssh-add /tmp/deputydev_core_deploy
+          
       - name: Build macOS/Linux binary
         run: ./build-macos-linux-binary.sh
 
