--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -22,11 +22,16 @@ jobs:
         run: |
           echo "${{ secrets.DEPUTYDEV_CORE_ACCESS_KEY }}" > /tmp/deputydev_core_deploy
           chmod 600 /tmp/deputydev_core_deploy
-
+      - name: Start ssh-agent and add deploy key
+        run: |
+          eval "$(ssh-agent -s)"
+          ssh-add /tmp/deputydev_core_deploy
+          
       - name: Add github.com to known_hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
+
 
       - name: Start ssh-agent and add deploy key
         run: |
