--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,10 +1,10 @@
-name: Build macos Linux Binary
+name: Build macOS/Linux Binary
 
 on:
   workflow_dispatch:
 
 jobs:
-  build-linux:
+  build-macos-linux:
     runs-on: macos-latest
 
     steps:
@@ -12,32 +12,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+
+      - name: Load SSH key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.DEPUTYDEV_CORE_ACCESS_KEY }}
+
       - name: Install uv
         uses: astral-sh/setup-uv@v6
         with:
           version: "0.8.15"
 
-      - name: Write deploy key
-        run: |
-          echo "${{ secrets.DEPUTYDEV_CORE_ACCESS_KEY }}" > /tmp/deputydev_core_deploy
-          chmod 600 /tmp/deputydev_core_deploy
-      - name: Start ssh-agent and add deploy key
-        run: |
-          eval "$(ssh-agent -s)"
-          ssh-add /tmp/deputydev_core_deploy
-          
       - name: Add github.com to known_hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-
-      - name: Start ssh-agent and add deploy key
-        run: |
-          eval "$(ssh-agent -s)"
-          ssh-add /tmp/deputydev_core_deploy
-          
       - name: Build macOS/Linux binary
         run: ./build-macos-linux-binary.sh
 
@@ -45,5 +35,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: binary-tarball
-          path: |
-            ./*.tar.gz
+          path: ./*.tar.gz
