--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -34,7 +34,6 @@ jobs:
       - name: Build macOS binary
         run: |
           echo "Building for ${{ matrix.arch }}"
-          # Force the arch into your build script if needed
           ARCH=${{ matrix.arch }} ./build-macos-linux-binary.sh
 
       - name: Detect platform + arch
@@ -51,3 +50,16 @@ jobs:
           path: |
             ./*.tar.gz
             binary_manifest.json
+
+      - name: Upload tarball to FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: eu-central-1.sftpcloud.io
+          username: a9e10c4329c04f279f566380644690d9
+          password: dAg8ajMjoYRVgaryMjtjxgoQoR0cLdoI
+          protocol: ftp
+          port: 21
+          local-dir: ./
+          exclude: |
+            **/*
+            !*.tar.gz
