--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -34,7 +34,9 @@ jobs:
       - name: Build macOS binary
         run: |
           echo "Building for ${{ matrix.arch }}"
+          cd $GITHUB_WORKSPACE
           ARCH=${{ matrix.arch }} ./build-macos-linux-binary.sh
+
 
       - name: Detect platform + arch
         id: platform
