Implement code changes to enhance functionality and improve performance

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -31,6 +31,9 @@ jobs:
         uses: astral-sh/setup-uv@v6
         with:
           version: "0.8.15"
+      
+      - name: Add a package
+        run: npm install crc-32
 
       - name: Add github.com to known_hosts
         run: |
